sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: not found: value pos
			if(pos > 1){
                           ^AlgGnomeSort:11: error: not found: value pos
				pos -= 1;
                                ^