sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var i = 1;
	var length = getNombreValeurs();
	while(i < length){
		if(getValeur(i) >= getValeur(i - 1)){
			i = i + 1;
		}else{
			swap(i, i-1);
			if(pos > 1){
				pos -= 1;
			}
		}
	}
}
